syntax = "proto3";

package trade;

option go_package = "github.com/aether-defense-system/service/trade/rpc";

// Request Parameters
message PlaceOrderRequest {
  int64 userId = 1;        // User ID, parsed from JWT Token
  repeated int64 courseIds = 2;  // Purchased course ID list
  repeated int64 couponIds = 3;  // Selected coupon ID list
  int64 orderId = 4;       // Snowflake algorithm ID
  int32 realAmount = 5;    // Order actual payment amount (cents)
}

// Response Parameters
message PlaceOrderResponse {
  int64 orderId = 1;       // Order ID
  int32 payAmount = 2;     // Actual payment amount (in cents)
  int32 status = 3;        // Order status (1: Pending Payment)
}

// Cancel Order Request Parameters
message CancelOrderRequest {
  int64 userId = 1;        // User ID, parsed from JWT Token
  int64 orderId = 2;       // Order ID to cancel
}

// Cancel Order Response Parameters
message CancelOrderResponse {
  int64 orderId = 1;       // Order ID
  int32 status = 2;        // Updated order status (2: Closed)
  bool success = 3;        // Whether cancellation was successful
}

// Trading Service Interface Definition
service TradeService {
  // Place Order Interface
  rpc PlaceOrder(PlaceOrderRequest) returns (PlaceOrderResponse);

  // Cancel Order Interface
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);
}
