syntax = "proto3";

package user;

option go_package = "github.com/aether-defense-system/service/user/rpc";

// Request Parameters
message GetUserRequest {
  int64 userId = 1;        // User ID
}

// Response Parameters
message GetUserResponse {
  int64 userId = 1;        // User ID
  string username = 2;     // Username
  string mobile = 3;       // Mobile Number
}

// User Service Interface Definition
service UserService {
  // Get User Information Interface
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}
